# C-Flame

./: .gitignore  EpiP2_KIOPS.cpp  nbutane.yaml
Flame/: Epi2_KIOPS.cpp  EpiP2_KIOPS.cpp  EpiP2_KIOPS.h  EpiRK4SC.cpp  EpiRK4SC_KIOPS.cpp  EpiRK4SC_KIOPS.h  EpiRK4SV.cpp  EpiRK5SC.cpp  Hybrid_IMEXP.h  gmon.out
Flame/Integrators/: Epi2_KIOPS.h  Epi3Ros.cpp  Epi3Ros.h  Epi3SC_KIOPS.cpp  Epi3SC_KIOPS.h  Epi3_KIOPS.cpp  Epi3_KIOPS.h  EpiP2_KIOPS.cpp  EpiP2_KIOPS.h  EpiRK4SV.h  EpiRK5C.cpp  EpiRK5V.cpp  EpiRK5V.h  Hybrid_IMEXP.cpp
Flame/OneD/: BuildHelpers.txt  Burgers.cpp  BurgersRef.txt  Chemistry.cpp  Chemistry.h  CreateIntegrators.cpp  CreateIntegrators.h  Diff_fT.txt  Flow.cpp  GriScratch.txt  InitiaData.txt  InitialConditions.cpp  OneDAdvDiffPar.cpp  OneDIgn.cpp  OneDIgnCons.cpp  OneDIgnParallel.cpp  PatchEpi3  Profiling.txt  Scratch.txt  TestD.x  TestInitialConditions.cpp  ZeroDIgn.cpp  gmon.out  runTChemIgnition  runTChemIgnition2  runZeroDIgn
Flame/ZeroD/: .BuildTChemFunction.swp  .IgnSolution.dat.swp  .Kapila.cpp.swp  .Profile.swp  .SeedData.txt  .ZeroDIgn.cpp.swp  .runHydrogen.swp  Backup  BuildCheckCP  BuildHelpers  BuildTChemFunction  BuildZeroDFinal  BuildZeroDVar  CPDebug.txt  CallgrindHydroSample1Jac.txt  CallgrindHydroSample1NoJac.txt  CallgrindNoJac.txt  CheckCP.cpp  Data2HydroSample1Jac.txt  Data2HydroSample1NoJac.txt  Data2HydroSample2Jac.txt  Data2HydroSample2NoJac.txt  Data2HydroSample3Jac.txt  Data2HydroSample3NoJac.txt  DataEPI.txt  DataEPI2GriSample1Jac.txt  DataEPI2GriSample1NoJac.txt  DataEPI2HydroSample1Jac.txt  DataEPI2HydroSample1JacV2.txt  DataEPI2HydroSample1NoJac.txt  DataEPI2HydroSample1NoJacV2.txt  DataEPI2HydroSample2Jac.txt  DataEPI2HydroSample2NoJac.txt  DataEPI2HydroSample3Jac.txt  DataEPI2HydroSample3NoJac.txt  DataEPI3GriSample1Jac.txt  DataEPI3GriSample1NoJac.txt  DataEPI3HydroSampl1Jac.txt  DataEPI3HydroSample1JacV2.txt  DataEPI3HydroSample1NoJac.txt  (+96 more)
Flame2.0/Helpers/: BuildHelpers.sh  CanteraTest.cpp  Epi2RetCode.cpp  Epi2RetCode.h  Epi3V.cpp  Epi3V.h  Epi3VCntrl.cpp  InitialConditions.cpp  InitialConditions.h  KiopsRetCode.cpp  KiopsRetCode.h  Print.cpp  Print.h
Flame2.0/OneDCantera/: Backup.sh  BuildHelpers  CMakeLists.txt  Chemistry.cpp  Chemistry.h  ChemistryFinal.cpp  ChemistryFinal.h  InitialConditions.h  Make.sh  OneDIgnCons.cpp  OneDIgnConsFinal.cpp  OneDIgnConsH2.cpp  OneDIgnConsNBut.cpp  OneDIgnEPI3V.cpp  OneDIgnGeneric.cpp  PatchHelpers  Print.h  Run300pt  RunConvergence
Flame2.0/OneDOld/: Chemistry.cpp  Chemistry.h  CreateIntegrators.cpp  InitialConditions.cpp  OneDIgnCons.cpp  Tf.txt  rho_fT.txt
Flame2.0/ZeroD/: BuildHelpers.sh  CopyJacData.sh  CopySafeVersion.sh  CopySampleData.sh  Make_TChemZeroDSimpleUtility.sh  Make_TChemZeroDSimpleUtilityCVODE.sh  Make_TestEigen.sh  (+41 more)
(+166 files in other folders)
